changed FactionControllerTests to use new controller