@@ -1,10 +1,8 @@
-package com.sitnik.warhammer.rosterbuilderapi.controller;
+package com.sitnik.warhammer.rosterbuilderapi.service;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.sitnik.warhammer.rosterbuilderapi.entity.Faction;
-import com.sitnik.warhammer.rosterbuilderapi.service.FactionService;
-import jakarta.persistence.EntityExistsException;
-import jakarta.persistence.EntityNotFoundException;
+import com.sitnik.warhammer.rosterbuilderapi.repository.FactionRepository;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
@@ -13,20 +11,23 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.hamcrest.Matchers.hasSize;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@WebMvcTest(FactionController.class)
+@WebMvcTest(FactionService.class)
 @AutoConfigureMockMvc(addFilters = false)
-class FactionControllerTest {
+class FactionServiceTest {
 
     @Autowired
     private MockMvc mockMvc;
@@ -35,12 +36,12 @@ class FactionControllerTest {
     private ObjectMapper objectMapper;
 
     @MockBean
-    private FactionService factionService;
+    private FactionRepository factionRepository;
 
     @Test
     void findAllReturnsEmptyList() throws Exception {
         // When
-        when(factionService.findAll()).thenReturn(List.of());
+        when(factionRepository.findAll()).thenReturn(List.of());
 
         // Then
         mockMvc.perform(get("/api/factions"))
@@ -58,7 +59,7 @@ class FactionControllerTest {
         List<Faction> factions = List.of(marines, orcs);
 
         // When
-        when(factionService.findAll()).thenReturn(factions);
+        when(factionRepository.findAll()).thenReturn(factions);
 
         // Then
         mockMvc.perform(get("/api/factions"))
@@ -76,7 +77,7 @@ class FactionControllerTest {
         Faction faction = new Faction(id, "Space Marines", "Ultramarines");
 
         // When
-        when(factionService.findById(id)).thenReturn(faction);
+        when(factionRepository.findById(Long.toString(id))).thenReturn(Optional.of(faction));
 
         // Then
         mockMvc.perform(get("/api/factions/{id}", id))
@@ -90,7 +91,7 @@ class FactionControllerTest {
         long id = 1L;
 
         // When
-        when(factionService.findById(id)).thenThrow(new EntityNotFoundException("Faction not found"));
+        when(factionRepository.findById(Long.toString(id))).thenReturn(Optional.empty());
 
         // Then
         mockMvc.perform(get("/api/factions/{id}", id))
@@ -104,13 +105,13 @@ class FactionControllerTest {
         Faction savedFaction = new Faction(1L, "Chaos Space Marines", "Traitors");
 
         // When
-        when(factionService.create(any(Faction.class))).thenReturn(savedFaction);
+        when(factionRepository.save(any(Faction.class))).thenReturn(savedFaction);
 
         // Then
         mockMvc.perform(post("/api/factions")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(inputFaction)))
-                .andExpect(status().isCreated())
+                .andExpect(status().isOk())
                 .andExpect(jsonPath("$.id").value(1))
                 .andExpect(jsonPath("$.name").value("Chaos Space Marines"));
     }
@@ -124,7 +125,7 @@ class FactionControllerTest {
         mockMvc.perform(post("/api/factions")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(invalidFaction)))
-                .andExpect(status().isBadRequest());
+                .andExpect(status().isBadRequest());  // 400 (validation @NotNull)
     }
 
     @Test
@@ -138,10 +139,9 @@ class FactionControllerTest {
         Faction savedOrks = new Faction(2L, "Orks", "Waaagh!");
         List<Faction> saved = List.of(savedMarines, savedOrks);
 
-        // When
-        when(factionService.bulk(anyList())).thenReturn(saved);
+        when(factionRepository.saveAll(anyList())).thenReturn(saved);
 
-        // Then
+        // When/Then
         mockMvc.perform(post("/api/factions/bulk")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(input)))
@@ -150,29 +150,35 @@ class FactionControllerTest {
                 .andExpect(jsonPath("$[0].name").value("Space Marines"))
                 .andExpect(jsonPath("$[1].name").value("Orks"));
     }
-    @Test
-    void bulkDuplicateReturnsConflict() throws Exception {
-        List<Faction> duplicate = List.of(new Faction(1L, "Duplicate", "desc"));
-
-        doThrow(new EntityExistsException("Duplicate factions exist"))
-                .when(factionService).bulk(anyList());
-
-        mockMvc.perform(post("/api/factions/bulk")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(duplicate)))
-                .andExpect(status().isConflict())
-                .andExpect(jsonPath("$.error").value("Duplicate factions exist"));
-    }
+// TODO - Need to handle Duplicates
+//    @Test
+//    void bulkHandlesDuplicateName() throws Exception {
+//        // Given
+//        Faction existing = new Faction(null, "Space Marines", "Ultramarines");  // Duplikat!
+//        Faction newFaction = new Faction(null, "Orks", "Waaagh!");
+//        List<Faction> input = List.of(existing, newFaction);
+//
+//        // When
+//        doThrow(new DataIntegrityViolationException("Duplicate name"))
+//                .when(factionRepository).saveAll(anyList());
+//
+//        // Then
+//        mockMvc.perform(post("/api/factions/bulk")
+//                        .contentType(MediaType.APPLICATION_JSON)
+//                        .content(objectMapper.writeValueAsString(input)))
+//                .andExpect(status().isBadRequest());  // 400 lub 409 Conflict
+//    }
 
     @Test
     void updateFactionSuccessfully() throws Exception {
         // Given
-        Faction updatedFaction = new Faction(1L, "Ultramarines", "Updated description");
+        Long id = 1L;
+        Faction updatedFaction = new Faction(id, "Ultramarines", "Updated description");
+        when(factionRepository.existsById("1"))
+                .thenReturn(true);
+        when(factionRepository.save(any(Faction.class))).thenReturn(updatedFaction);
 
-        when(factionService.update(eq(updatedFaction.getId()), any(Faction.class)))  // eq(id)!
-                .thenReturn(updatedFaction);
-
-        mockMvc.perform(put("/api/factions/{id}", updatedFaction.getId())
+        mockMvc.perform(put("/api/factions/{id}", id)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(updatedFaction)))
                 .andExpect(status().isOk());
@@ -183,8 +189,8 @@ class FactionControllerTest {
         // Given
         Long id = 999L;
         Faction faction = new Faction(id, "Nonexistent", "Test");
-        when(factionService.update(id,faction))
-                .thenThrow(new EntityNotFoundException("Not found"));
+        when(factionRepository.existsById("999"))  // String!
+                .thenReturn(false);
 
         mockMvc.perform(put("/api/factions/{id}", id)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -196,37 +202,40 @@ class FactionControllerTest {
     void updateExistentFactionWithTooShortDescription() throws Exception {
         // Given
         Long id = 1L;
-        Faction invalidFaction = new Faction(id, "Ultramarines", "a");  // @Size(min=3)!
+        Faction invalidFaction = new Faction(id, "Ultramarines", "a");  // @Size(min=3)
+        when(factionRepository.existsById("1")).thenReturn(true);
 
-        // Then
         mockMvc.perform(put("/api/factions/{id}", id)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(invalidFaction)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.description").value("size must be between 2 and 500"));  // ControllerAdvice!
+                .andExpect(status().isBadRequest());
     }
 
     @Test
-    void deleteExistingFactionReturnsNoContent() throws Exception {
+    void deleteExistingFactionReturnsOk() throws Exception {
+        // Given
         long id = 1L;
+        when(factionRepository.existsById("1")).thenReturn(true);
+        doNothing().when(factionRepository).deleteById("1");
 
+        // Then
         mockMvc.perform(delete("/api/factions/{id}", id))
-                .andExpect(status().isNoContent());
+                .andExpect(status().isOk());
 
-        verify(factionService).delete(id);
+        verify(factionRepository).deleteById("1");
     }
 
     @Test
     void deleteNonExistentFactionReturnsNotFound() throws Exception {
+        // Given
         long id = 999L;
+        when(factionRepository.existsById("999")).thenReturn(false);
 
-        doThrow(new EntityNotFoundException("Not found"))
-                .when(factionService).delete(id);
-
+        // Then
         mockMvc.perform(delete("/api/factions/{id}", id))
                 .andExpect(status().isNotFound());
 
-        verify(factionService).delete(id);
+        verify(factionRepository, never()).deleteById(anyString());
     }
 
     @Test
@@ -239,7 +248,7 @@ class FactionControllerTest {
         );
 
         // When
-        when(factionService.searchByNameContaining(name))
+        when(factionRepository.findFactionsByNameContainsIgnoreCase(name))
                 .thenReturn(factions);
 
         // Then
@@ -253,20 +262,15 @@ class FactionControllerTest {
 
     @Test
     void searchByNameReturnsNoContentWhenEmpty() throws Exception {
-        String name = "marines";
-        List<Faction> factions = List.of(
-                new Faction(1L, "Space Marines", "Elite troops"),
-                new Faction(2L, "Blood Marines", "Another faction")
-        );
-
-        // When
-        when(factionService.searchByNameContaining(name))
-                .thenReturn(Collections.emptyList());
+        // Given
+        String name = "unknown";
+        when(factionRepository.findFactionsByNameContainsIgnoreCase(name))
+                .thenReturn(List.of());
 
         // Then
         mockMvc.perform(get("/api/factions/search")
                         .param("name", name))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(0));
+                .andExpect(status().isNoContent());
     }
+
 }
